--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@seatsio/seatsio-react": "^15.17.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.548.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "seatsio": "^87.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
