--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
