--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "seatsio": "^87.0.0"
+    "seatsio": "^87.0.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
